--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,14 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'it.neokree:MaterialNavigationDrawer:1.3.3'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.baoyz.swipemenulistview:library:1.2.1'
+    compile 'com.mcxiaoke.volley:library:1.0.7'
+    compile files('libs/androidannotations-api-2.7.1.jar')
+    compile files('libs/nineoldandroids-2.4.0.jar')
+    compile files('libs/universal-image-loader-1.8.2.jar')
 }
