--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.poocode.sanpacho" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,10 +20,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".dark.Accounts"
-            android:label="@string/app_name"/>
-
+        <activity
+            android:name=".dark.Accounts"
+            android:label="@string/app_name" />
+        <activity
+            android:name=".Activities.ActDesHotRes"
+            android:label="@string/title_activity_act_des_hot_res" >
+        </activity>
     </application>
 
 </manifest>
