--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'it.neokree:MaterialNavigationDrawer:1.3.3'
     compile 'com.jakewharton:butterknife:7.0.1'
@@ -35,4 +35,6 @@ dependencies {
     compile files('libs/androidannotations-api-2.7.1.jar')
     compile files('libs/nineoldandroids-2.4.0.jar')
     compile files('libs/universal-image-loader-1.8.2.jar')
+    compile 'com.android.support:cardview-v7:23.0.1'
+    compile 'com.android.support:recyclerview-v7:23.0.1'
 }
