--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,15 +26,18 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.0'
-    compile 'it.neokree:MaterialNavigationDrawer:1.3.3'
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.google.code.gson:gson:2.2.4'
-    compile 'com.baoyz.swipemenulistview:library:1.2.1'
-    compile 'com.mcxiaoke.volley:library:1.0.7'
     compile files('libs/androidannotations-api-2.7.1.jar')
     compile files('libs/nineoldandroids-2.4.0.jar')
     compile files('libs/universal-image-loader-1.8.2.jar')
+    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'it.neokree:MaterialNavigationDrawer:1.3.3'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.google.code.gson:gson:2.3'
+    compile 'com.baoyz.swipemenulistview:library:1.2.1'
+    compile 'com.mcxiaoke.volley:library:1.0.7'
     compile 'com.android.support:cardview-v7:23.0.1'
     compile 'com.android.support:recyclerview-v7:23.0.1'
+    compile 'com.flaviofaria:kenburnsview:1.0.6'
+    compile 'com.google.android.gms:play-services:7.8.0'
+    compile 'com.google.maps.android:android-maps-utils:0.4+'
 }
